--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1554,7 +1554,7 @@
   <data name="DefaultCanvas" xml:space="preserve">
     <value>デフォルトのキャンバス</value>
   </data>
-  <data name="ImgImport" xml:space="preserve">
+  <data name="ImageImport" xml:space="preserve">
     <value>画像のインポート</value>
   </data>
   <data name="ImportLatestImages" xml:space="preserve">
@@ -2426,9 +2426,6 @@
   </data>
   <data name="ContinuousMeasurement" xml:space="preserve">
     <value>連続測定</value>
-  </data>
-  <data name="MenuLanguage" xml:space="preserve">
-    <value>言語(_L)</value>
   </data>
   <data name="StartMeasurementValue_V_mA" xml:space="preserve">
     <value>初期測定値（V/mA）</value>
