--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1554,7 +1554,7 @@
   <data name="DefaultCanvas" xml:space="preserve">
     <value>기본 캔버스</value>
   </data>
-  <data name="ImgImport" xml:space="preserve">
+  <data name="ImageImport" xml:space="preserve">
     <value>이미지 가져오기</value>
   </data>
   <data name="ImportLatestImages" xml:space="preserve">
@@ -2426,9 +2426,6 @@
   </data>
   <data name="ContinuousMeasurement" xml:space="preserve">
     <value>연속 측정</value>
-  </data>
-  <data name="MenuLanguage" xml:space="preserve">
-    <value>언어(_L)</value>
   </data>
   <data name="StartMeasurementValue_V_mA" xml:space="preserve">
     <value>초기 측정값(V/mA)</value>
