--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -1554,7 +1554,7 @@
   <data name="DefaultCanvas" xml:space="preserve">
     <value>默认画布</value>
   </data>
-  <data name="ImgImport" xml:space="preserve">
+  <data name="ImageImport" xml:space="preserve">
     <value>图像导入</value>
   </data>
   <data name="ImportLatestImages" xml:space="preserve">
@@ -2426,9 +2426,6 @@
   </data>
   <data name="ContinuousMeasurement" xml:space="preserve">
     <value>连续测量</value>
-  </data>
-  <data name="MenuLanguage" xml:space="preserve">
-    <value>语言(_Language)</value>
   </data>
   <data name="StartMeasurementValue_V_mA" xml:space="preserve">
     <value>开始测量值(V/mA)</value>
