--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -2463,4 +2463,22 @@
   <data name="EnableFocus" xml:space="preserve">
     <value>對焦使能</value>
   </data>
+  <data name="RegistryCenterNotConnected" xml:space="preserve">
+    <value>註冊中心沒有連接</value>
+  </data>
+  <data name="TokenEmpty_RefreshingToken_PleaseRetry" xml:space="preserve">
+    <value>Token為空，正在刷新token,請重試</value>
+  </data>
+  <data name="WorkflowStartNodeNotFound_RunFailed" xml:space="preserve">
+    <value>找不到流程啟動結點，運作失敗</value>
+  </data>
+  <data name="ExecutionCancelled" xml:space="preserve">
+    <value>已經取消執行</value>
+  </data>
+  <data name="FlowWindows" xml:space="preserve">
+    <value>流程視窗</value>
+  </data>
+  <data name="Processing" xml:space="preserve">
+    <value>處理中...</value>
+  </data>
 </root>
