--- a/ColorVision/Properties/Resources.resx
+++ b/ColorVision/Properties/Resources.resx
@@ -310,10 +310,10 @@
     <value>百度云盘下载</value>
   </data>
   <data name="MenuUpdateReInstall_重新安装当前版本" xml:space="preserve">
-    <value>ReinstallCurrentVersion</value>
+    <value>重新安装当前版本</value>
   </data>
   <data name="ClearPackageCache" xml:space="preserve">
-    <value> "清除安装包缓存</value>
+    <value>清除安装包缓存</value>
   </data>
   <data name="OpenCacheFolder" xml:space="preserve">
     <value>打开缓存文件夹</value>
