--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -2478,4 +2478,10 @@
   <data name="Processing" xml:space="preserve">
     <value>처리 중...</value>
   </data>
+  <data name="Is4Wire" xml:space="preserve">
+    <value>4줄 활성화</value>
+  </data>
+  <data name="IsFront" xml:space="preserve">
+    <value>전면 패널 활성화</value>
+  </data>
 </root>
