--- a/Projects/ProjectStarKey/Properties/Resources.en.resx
+++ b/Projects/ProjectStarKey/Properties/Resources.en.resx
@@ -120,4 +120,46 @@
   <data name="MenuLanguage" xml:space="preserve">
     <value>_Language</value>
   </data>
+  <data name="Calibration" xml:space="preserve">
+    <value>Calibration</value>
+  </data>
+  <data name="CaptureImage" xml:space="preserve">
+    <value>CaptureImage</value>
+  </data>
+  <data name="ImageFilter" xml:space="preserve">
+    <value>ImageFilter</value>
+  </data>
+  <data name="Model" xml:space="preserve">
+    <value>Model</value>
+  </data>
+  <data name="OpenObservationCamera" xml:space="preserve">
+    <value>Model</value>
+  </data>
+  <data name="NoFilter" xml:space="preserve">
+    <value>NoFilter</value>
+  </data>
+  <data name="MovingAverage" xml:space="preserve">
+    <value>MovingAverage</value>
+  </data>
+  <data name="LowPassFilter" xml:space="preserve">
+    <value>MovingAverage</value>
+  </data>
+  <data name="KernelSize" xml:space="preserve">
+    <value>KernelSize</value>
+  </data>
+  <data name="GaussianFilter" xml:space="preserve">
+    <value>GaussianFilter</value>
+  </data>
+  <data name="BilateralFilter" xml:space="preserve">
+    <value>BilateralFilter</value>
+  </data>
+  <data name="ApplyFilter" xml:space="preserve">
+    <value>ApplyFilter</value>
+  </data>
+  <data name="MedianFilter" xml:space="preserve">
+    <value>MedianFilter</value>
+  </data>
+  <data name="FilterType" xml:space="preserve">
+    <value>FilterType</value>
+  </data>
 </root>
