--- a/Projects/ProjectStarKey/Properties/Resources.fr.resx
+++ b/Projects/ProjectStarKey/Properties/Resources.fr.resx
@@ -120,4 +120,46 @@
   <data name="MenuLanguage" xml:space="preserve">
     <value>Langue(L)</value>
   </data>
+  <data name="Model" xml:space="preserve">
+    <value>modèle</value>
+  </data>
+  <data name="OpenObservationCamera" xml:space="preserve">
+    <value>Ouvrez la caméra d'observation</value>
+  </data>
+  <data name="CaptureImage" xml:space="preserve">
+    <value>Obtenir l'image</value>
+  </data>
+  <data name="Calibration" xml:space="preserve">
+    <value>Correction</value>
+  </data>
+  <data name="ImageFilter" xml:space="preserve">
+    <value>Filtrage d'images</value>
+  </data>
+  <data name="NoFilter" xml:space="preserve">
+    <value>Aucun filtrage</value>
+  </data>
+  <data name="LowPassFilter" xml:space="preserve">
+    <value>filtre passe-bas</value>
+  </data>
+  <data name="MovingAverage" xml:space="preserve">
+    <value>moyenne mobile</value>
+  </data>
+  <data name="GaussianFilter" xml:space="preserve">
+    <value>filtre gaussien</value>
+  </data>
+  <data name="BilateralFilter" xml:space="preserve">
+    <value>filtrage bilatéral</value>
+  </data>
+  <data name="KernelSize" xml:space="preserve">
+    <value>taille nucléaire</value>
+  </data>
+  <data name="ApplyFilter" xml:space="preserve">
+    <value>Filtrage des applications</value>
+  </data>
+  <data name="MedianFilter" xml:space="preserve">
+    <value>Filtrage médian</value>
+  </data>
+  <data name="FilterType" xml:space="preserve">
+    <value>Type de filtre</value>
+  </data>
 </root>
