--- a/Plugins/EventVWR/Properties/Resources.fr.resx
+++ b/Plugins/EventVWR/Properties/Resources.fr.resx
@@ -120,10 +120,10 @@
   <data name="Search" xml:space="preserve">
     <value>Recherche</value>
   </data>
-  <data name="ChartGenerationTool" xml:space="preserve">
-    <value>Outil de génération d'images</value>
-  </data>
   <data name="EventWindow" xml:space="preserve">
     <value>Observateur d'événements</value>
+  </data>
+  <data name="DumpFileSettings" xml:space="preserve">
+    <value>Paramètres des fichiers d'archive</value>
   </data>
 </root>
