--- a/Plugins/EventVWR/Properties/Resources.ru.resx
+++ b/Plugins/EventVWR/Properties/Resources.ru.resx
@@ -120,10 +120,10 @@
   <data name="Search" xml:space="preserve">
     <value>Поиск</value>
   </data>
-  <data name="ChartGenerationTool" xml:space="preserve">
-    <value>Инструмент генерации изображений</value>
-  </data>
   <data name="EventWindow" xml:space="preserve">
     <value>Просмотрщик событий</value>
+  </data>
+  <data name="DumpFileSettings" xml:space="preserve">
+    <value>Настройки архивного файла</value>
   </data>
 </root>
