--- a/Plugins/Pattern/Properties/Resources.en.resx
+++ b/Plugins/Pattern/Properties/Resources.en.resx
@@ -121,6 +121,6 @@
     <value>Search</value>
   </data>
   <data name="ChartGenerationTool" xml:space="preserve">
-    <value>Image generation tool</value>
+    <value>ChartGenerationTool</value>
   </data>
 </root>
